--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "sergiocarraced-site",
+  "version": "1.0.0",
   "private": true,
   "hexo": {
     "version": "3.8.0"
   },
+  "scripts": {
+    "build": "hexo clean && hexo generate && hexo deploy"
+  },
   "dependencies": {
     "hexo": "^3.7.0",
+    "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
