--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ install: npm install
 before_script:
 - git config --global user.name "Sergio Carracedo"
 - git config --global user.email "info@sergiocarracedo.es"
+- sed -i "s/__GITHUB_TOKEN__/${__GITHUB_TOKEN__}/" _config.yml
 
 script: npm run build
