Deploy repo using token

--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,6 @@ theme: sergiocarracedo
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:sergiocarracedo/blog.git
+  repo: https://__GITHUB_TOKEN__@github.com/sergiocarracedo/blog.git
   branch: gh-pages
   message:
