--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1"
+    "hexo-server": "^0.3.1",
+    "lodash": "^4.17.13"
   },
   "devDependencies": {
     "node-sass": "^4.10.0",
