--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.1",
-    "lodash": "^4.17.13"
+    "lodash": "^4.17.13",
+    "lodash.mergewith": "^4.6.2",
+    "uglify-js": "^2.6.0"
   },
   "devDependencies": {
     "node-sass": "^4.10.0",
