--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.1",
     "lodash": "^4.17.13",
+    "lodash.merge": "^4.6.2",
     "lodash.mergewith": "^4.6.2",
     "uglify-js": "^2.6.0"
   },
