--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ permalink_defaults:
 
 # Directory
 source_dir: source
-public_dir: docs
+public_dir: public
 #tag_dir: tags
 #archive_dir: archives
 #category_dir: categories
@@ -89,11 +89,11 @@ theme: sergiocarracedo
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-#deploy:
-#  type: git
-#  repo: https://__GITHUB_TOKEN__@github.com/sergiocarracedo/blog.git
-#  branch: gh-pages
-#  message:
+deploy:
+  type: git
+  repo: https://__GITHUB_TOKEN__@github.com/sergiocarracedo/blog.git
+  branch: gh-pages
+  message:
 
 article_emoji:
   full: true
