--- a/_config.yml
+++ b/_config.yml
@@ -106,3 +106,14 @@ photoswipe:
   imgSrcIn: dataOriginal
   className: image-container
   dataType: content-image
+
+eed:
+  type: atom
+  path: atom.xml
+  limit: 25
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
+  autodiscovery: true
