--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle:
 description: Sergio Carracedo personal Blog
 keywords:
 author: Sergio Carracedo
-language: es
+language: en
 timezone:
 
 # URL
