--- a/themes/sergiocarracedo/package.json
+++ b/themes/sergiocarracedo/package.json
@@ -7,8 +7,13 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "node-sass": "^4.10.0",
-    "sass-loader": "^7.1.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2",
     "sireno-grid": "^0.2.2"
+  },
+  "dependencies": {
+    "global": "^4.4.0",
+    "hexo": "^4.2.1",
+    "hexo-server": "^1.0.0"
   }
 }
