--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "version": "5.1.0"
   },
   "scripts": {
-    "build": "hexo clean && hexo generate && hexo deploy"
+    "build": "hexo clean && hexo generate"
   },
   "dependencies": {
     "fstream": "^1.0.12",
     "global": "^4.4.0",
     "hexo": "^5.0.0",
     "hexo-cli": "^3.1.0",
-    "hexo-deployer-git": "^2.1.0",
     "hexo-filter-github-emojis": "^2.1.0",
     "hexo-filter-responsive-images": "^1.5.0",
     "hexo-generator-archive": "^1.0.0",
