--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo-cli": "^3.1.0",
     "hexo-filter-github-emojis": "^2.1.0",
     "hexo-filter-responsive-images": "^1.5.0",
+    "hexo-generator-alias": "^0.1.3",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-feed": "^2.2.0",
