--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "hexo": "^5.0.0",
     "hexo-cli": "^3.1.0",
     "hexo-filter-github-emojis": "^2.1.0",
-    "hexo-filter-responsive-images": "^1.5.0",
+    "hexo-filter-responsive-images": "1.7.0",
     "hexo-generator-alias": "^0.1.3",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
@@ -27,9 +27,14 @@
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
     "hexo-tag-asciinema": "^0.0.3",
-    "lodash": "^4.17.13",
+    "highlight.js": "10.7.1",
+    "lodash": "4.17.21",
     "lodash.merge": "^4.6.2",
     "lodash.mergewith": "^4.6.2",
+    "prismjs": "1.24.0",
+    "striptags": "3.2.0",
+    "tar": "3.2.3",
+    "trim-newlines": "3.0.1",
     "uglify-js": "^3.8.1"
   },
   "devDependencies": {
