--- a/config.yaml
+++ b/config.yaml
@@ -18,7 +18,7 @@ params:
   keywords:
   description: Sergio Carracedo's personal page and blog
   author: Sergio Carracedo
-  GA: 'UA-133459072-1'
+  GA: 'G-87X78TXEGE'
   disqus: sergiocarracedo.disqus.com
   favicon: 'favicon.png'
   mainSections: ["posts"]
