--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,12 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [
-    ".astro/types.d.ts",
-    "**/*"
-  ],
-  "exclude": [
-    "dist"
-  ],
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"],
   "compilerOptions": {
     "strictNullChecks": true,
+    "resolveJsonModule": true,
     "paths": {
-      "@/*": [
-        "src/*",
-        "tailwind.config.ts"
-      ]
+      "@/*": ["src/*", "tailwind.config.ts"]
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
