--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -1,5 +1,6 @@
 node_modules/
 dist/
+.astro/
 .build/
 .next/
 output/
@@ -10,5 +11,3 @@ coverage/
 .vscode/
 .idea/
 .DS_Store
-*.astro.build/
-pnpm-lock.yaml
