--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,10 @@
 {
-  "recommendations": ["astro-build.astro-vscode", "unifiedjs.vscode-mdx"],
+  "recommendations": [
+    "astro-build.astro-vscode",
+    "unifiedjs.vscode-mdx",
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint",
+    "davidanson.vscode-markdownlint"
+  ],
   "unwantedRecommendations": []
 }
