--- a/package.json
+++ b/package.json
@@ -18,47 +18,52 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@astrojs/markdown-remark": "^6.3.6",
-    "@astrojs/mdx": "^4.3.4",
-    "@astrojs/react": "^4.3.0",
-    "@astrojs/rss": "^4.0.12",
-    "@astrojs/sitemap": "^3.5.0",
+    "@astrojs/markdown-remark": "^6.3.10",
+    "@astrojs/mdx": "^4.3.13",
+    "@astrojs/react": "^4.4.2",
+    "@astrojs/rss": "^4.0.14",
+    "@astrojs/sitemap": "^3.6.0",
     "@jop-software/astro-cookieconsent": "^3.0.1",
-    "@tailwindcss/vite": "^4.1.8",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "astro": "^5.13.2",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "astro": "^5.16.6",
     "astro-icon": "^1.1.5",
-    "astro-pagefind": "^1.8.3",
+    "astro-pagefind": "^1.8.5",
     "gray-matter": "^4.0.3",
     "html-to-text": "^9.0.5",
     "markdown-it": "^14.1.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "rehype-autolink-headings": "^7.1.0",
     "remark-directive": "^4.0.0",
-    "remark-emoji": "^5.0.1",
+    "remark-emoji": "^5.0.2",
     "remark-imgattr": "^1.0.5",
-    "sass": "^1.89.1",
-    "sharp": "^0.34.2",
-    "tailwindcss": "^4.1.8",
+    "sass": "^1.97.1",
+    "sharp": "^0.34.5",
+    "tailwindcss": "^4.1.18",
     "tailwindcss-multi-column": "^1.0.2",
     "unist-util-visit": "^5.0.0",
     "vanilla-cookieconsent": "^3.1.0"
   },
   "devDependencies": {
-    "@types/node": "^24.5.2",
-    "@typescript-eslint/eslint-plugin": "^8.44.1",
-    "@typescript-eslint/parser": "^8.44.1",
-    "eslint": "^9.36.0",
-    "eslint-config-love": "^130.0.0",
+    "@types/node": "^25.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
+    "eslint": "^9.39.2",
+    "eslint-config-love": "^140.0.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-n": "^17.23.1",
     "eslint-plugin-promise": "^7.2.1",
-    "markdownlint-cli": "^0.45.0",
-    "oxlint": "^1.18.0",
-    "prettier": "^3.5.3",
+    "markdownlint-cli": "^0.47.0",
+    "oxlint": "^1.34.0",
+    "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1"
   },
-  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
+  "pnpm": {
+    "overrides": {
+      "flat": ">=5.0.1"
+    }
+  }
 }
