feat: add complete newsletter system with AI-powered content
- Add newsletter subscription forms (footer + optional toast)
- Implement double opt-in confirmation flow
- Create React Email templates for welcome and monthly newsletters
- Add Gemini AI integration for content generation
- Setup Resend for email delivery
- Create GitHub Actions for automation:
  - Subscription handling and storage
  - Monthly newsletter generation and sending
- Add comprehensive documentation and setup guides
- Include subscriber management system

Features:
- 📧 Subscription forms with validation
- ✅ Email confirmation required
- 🤖 AI-generated summaries using Gemini
- 📅 Automated monthly sending via GitHub Actions
- 📊 Professional email templates
- 🔒 Secure with GitHub Secrets

--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.23",
     "@astrojs/markdown-remark": "^6.3.10",
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.15",
     "@astrojs/sitemap": "^3.7.0",
+    "@google/generative-ai": "^0.24.1",
     "@jop-software/astro-cookieconsent": "^3.0.1",
+    "@octokit/rest": "^22.0.1",
+    "@react-email/components": "^1.0.7",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "ai": "^6.0.78",
     "astro": "^5.17.0",
     "astro-icon": "^1.1.5",
     "astro-pagefind": "^1.8.5",
@@ -37,10 +42,12 @@
     "markdown-it": "^14.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-email": "^5.2.8",
     "rehype-autolink-headings": "^7.1.0",
     "remark-directive": "^4.0.0",
     "remark-emoji": "^5.0.2",
     "remark-imgattr": "^1.0.5",
+    "resend": "^6.9.2",
     "sass": "^1.97.1",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18",
