refactor: migrate from JSON file storage to Resend Contacts API
- Remove subscribers/subscribers.json and related files
- Remove GitHub Action for subscription handling
- Remove @octokit/rest dependency
- Update subscribe.ts to check Resend API for existing contacts
- Update confirm.ts to add contacts directly to Resend
- Update send-newsletter.js to fetch subscribers from Resend API
- Simplify architecture: User → Resend API → Newsletter
- Clean up environment variables (removed GitHub-related vars)

This refactoring eliminates unnecessary complexity and leverages
Resend's built-in contact management instead of custom JSON storage.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
   "compilerOptions": {
     "strictNullChecks": true,
     "resolveJsonModule": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*", "tailwind.config.ts"]
+      "@/*": ["./src/*"]
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
