--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@astrojs/sitemap": "^3.7.0",
     "@google/generative-ai": "^0.24.1",
     "@jop-software/astro-cookieconsent": "^3.0.1",
-    "@octokit/rest": "^22.0.1",
     "@react-email/components": "^1.0.7",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.7",
@@ -59,6 +58,7 @@
     "@types/node": "^25.0.3",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
     "@typescript-eslint/parser": "^8.50.0",
+    "dotenv": "^17.3.1",
     "eslint": "^9.39.2",
     "eslint-config-love": "^140.0.0",
     "eslint-plugin-import": "^2.32.0",
@@ -67,7 +67,8 @@
     "markdownlint-cli": "^0.47.0",
     "oxlint": "^1.34.0",
     "prettier": "^3.7.4",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "tsx": "^4.21.0"
   },
   "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
   "pnpm": {
