feat: add newsletter:test script for testing
- Add npm script 'newsletter:test' to package.json
- Change test mode to use --test flag instead of env var
- Test mode now sends email to hi@sergiocarracedo.es
- Test mode skips marking posts as sent
- Usage: pnpm newsletter:test

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint:md": "markdownlint \"**/*.md\" \"**/*.mdx\"",
     "lint:md:fix": "markdownlint --fix \"**/*.md\" \"**/*.mdx\"",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "newsletter:test": "node scripts/send-newsletter.js --test"
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.23",
