feat: improve newsletter design and fix image loading
Newsletter Pages:
- Update unsubscribe and archive pages to use consistent Tailwind styles
- Use wrapper class and theme colors (primary, secondary)
- Replace hardcoded colors with theme variables
- Use btn class for consistent button styling

Email Template:
- Add profile picture in header (sergiocarracedo-alt-optimized.png)
- Fix background color to match website (#f8f5ed)
- Resize post images to 600x300 for better display
- Add box shadow to container
- Fix image URLs to use heroImage path directly
- Improve image display with maxWidth and block display

Generate Newsletter Script:
- Fix image URL construction to use heroImage path
- Remove incorrect /cover.png suffix

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:md:fix": "markdownlint --fix \"**/*.md\" \"**/*.mdx\"",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "newsletter:test": "node scripts/send-newsletter.js --test"
+    "newsletter:test": "tsx scripts/send-newsletter.js --test"
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.23",
