--- a/workers/newsletter-api/wrangler.toml
+++ b/workers/newsletter-api/wrangler.toml
@@ -11,6 +11,7 @@ compatibility_date = "2024-01-01"
 SITE_URL = "https://sergiocarracedo.es"
 FROM_EMAIL = "newsletter@sergiocarracedo.es"
 ALLOWED_ORIGIN = "https://sergiocarracedo.es"
+RESEND_AUDIENCE_ID = "e4dd5f5c-34fd-4e9d-9b3f-81cf55ed1e47"
 
 # Secrets (set via `wrangler secret put RESEND_API_KEY`)
 # RESEND_API_KEY = "re_xxx"
