--- a/workers/newsletter-api/wrangler.toml
+++ b/workers/newsletter-api/wrangler.toml
@@ -9,6 +9,7 @@ compatibility_date = "2024-01-01"
 
 [vars]
 SITE_URL = "https://sergiocarracedo.es"
+WORKER_URL = "https://newsletter-api.sergiocarracedo.workers.dev"
 FROM_EMAIL = "newsletter@sergiocarracedo.es"
 ALLOWED_ORIGIN = "https://sergiocarracedo.es"
 RESEND_AUDIENCE_ID = "e4dd5f5c-34fd-4e9d-9b3f-81cf55ed1e47"
