fix(workflow): use --keep-vars for Worker deployment
Fixes Cloudflare API error 10214 when deploying via GitHub Actions

--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -28,7 +28,6 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           workingDirectory: workers/newsletter-api
-          secrets: |
-            RESEND_API_KEY
+          command: deploy --keep-vars
         env:
           RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
